--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -88,8 +88,12 @@ h1{
 	position: relative;
 	text-align: right;
 	padding: 40px 40px 0px;
-	color: #566D7D;
-	text-shadow: -1px 2px white, 2px 1px white, 1px 2px white, 2px -1px white;
+
+	a{
+		color: #566D7D;
+		text-decoration: none;
+		text-shadow: -1px 2px white, 2px 1px white, 1px 2px white, 2px -1px white;	
+	}
 
 
 	@include tablet{
