--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -81,6 +81,7 @@ body {
 .wrapper{
 	display: flex;
 	flex-direction: column;
+	transition: 2s;
 }
 
 h1{
@@ -151,7 +152,12 @@ h1{
 		width: 100%;
 
 		@include desktop{
-			width: 100%;
+			width: 60%;
+		}
+
+		@include bigger-desktop{
+
+				width: 100%;
 		}
 
 		img{
@@ -179,5 +185,36 @@ h1{
 
 	.content{
 		margin-left: 30px;
+		
+		p{
+			line-height: 1.25em;
+
+			span{
+				text-decoration: underline;
+			}
+		}
+
+		.source-links{
+			text-decoration: none;
+			color: #9B7A5F;
+			transition: .2s;
+
+			&:hover{
+				background: #9B7A5F;
+				color: #AFC4CF;
+				border: 1px solid #AFC4CF
+			}
+		}
+		
+		.back{
+			text-align: right;
+			padding: 20px;
+			color: #9B7A5F;
+			text-decoration: none;
+
+			&:hover{
+				color: black;
+			}
+		}
 	}
 }
